--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,5 +5,7 @@ authors = ["Benjamin Fox <deadalus.ai@gmail.com>"]
 
 [dependencies]
 iron = "0.4.0"
-maud = "0.13.0"
 iron-pipeline = { git = "https://github.com/deadalusai/iron-pipeline" }
+router = "0.4.0"
+maud = { version = "0.13.0", features = ["iron"] }
+maud_macros = "0.13.0"
